--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,18 +3,16 @@
 <div class="login_container">
 
   <h2 style="font-size: 30px; color: #4e4e51;"><%= t('forgot') %></h1>
+  
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>  
     
-    <div style="display: flex; flex-direction: column; gap: 24px;">
-      <div style="display: flex; flex-direction: column; gap: 8px;">
-        <%= f.label :email %>
+    <div style="<%= form_container_styles %>">
+      <%= render "shared/form_group", f: f, field: :email, label_text: t('email')  %>
         <%= f.email_field :email, autofocus: true, autocomplete: "email", style: "width: 100%;" %>  
       </div>
 
-      <div class="actions">
-        <%= f.submit t('reset_instructions') %>
-      </div>
-    </div>
+      <br>
+      <%= render "shared/form_buttons", f: f, button_text: t('reset_instructions') %>
   <% end %>
 </div>
