--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,7 +27,7 @@
             <% if user_signed_in? %>
                 <div class="header-gap">
                     <%= link_to user_posts_path(user_id: current_user.id), class: 'text-blue-500 hover:underline' do %>
-                        <span>Posts do Usuário</span>
+                        <span><%= t('my_posts') %></span>
                     <% end %>
                     
                     <%= button_to new_post_path, method: :get, class: "create" do %>
