--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <%= content_for :title, t('create') %>
 
 <div class="login_container">
-  <h1 style="font-size: 30px; color: #4e4e51;"><%= t('create_account') %></h1>
+  <h1 style="font-size: 30px; color: #4e4e51;"><%= t('create') %></h1>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
